[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/debug_interface.gd" type="Script" id=1]

[node name="DebugInterface" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="StateInfo" type="MarginContainer" parent="."]
margin_left = 10.0
margin_top = 10.0

[node name="VBoxContainer" type="VBoxContainer" parent="StateInfo"]
margin_right = 131.0
margin_bottom = 32.0

[node name="StateLabel" type="Label" parent="StateInfo/VBoxContainer"]
margin_right = 131.0
margin_bottom = 14.0
text = "Player state: {name}"

[node name="ActionStateLabel" type="Label" parent="StateInfo/VBoxContainer"]
margin_top = 18.0
margin_right = 131.0
margin_bottom = 32.0
text = "Action state: {name}"
